diss: finishing outlook

--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -640,6 +640,38 @@ url = "http://www.sciencedirect.com/science/article/pii/S0888613X12000862",
   editor = {Coolen, F. and de Cooman, G. and Fetz, T. and Oberguggenberger, M.},
   pages={371--380},
   year={2011},
+  url={http://www.sipta.org/isipta11/proceedings/papers/s008.pdf},
   address = {Innsbruck},
   publisher = {SIPTA}
 }
+
+@inproceedings{2013:utkin-wiencierz,
+    Author = {Lev Utkin and Andera Wiencierz},
+    Booktitle = {ISIPTA '13: Proceedings of the Eighth International Symposium on Imprecise Probabilities: Theories and Applications},
+    Editor = {Fabio Cozman and Thierry Denoeux and Sebastian Destercke and Teddy Seidenfeld},
+    pages = {***--***},
+    Title = {An imprecise boosting-like approach to regression},
+    Url = {http://www.sipta.org/isipta13/proceedings/papers/s035.pdf},
+    Year = {2013}}
+
+@article{2010:utkin,
+  title={Regression analysis using the imprecise Bayesian normal model},
+  author={Lev Utkin},
+  journal={International Journal of Data Analysis Techniques and Strategies},
+  volume={2},
+  pages={356--372},
+  year={2010}
+}
+
+@inproceedings{2011:hampel,
+  title={Potential Surprises},
+  author={Frank Hampel},
+  booktitle = {ISIPTA '11: Proceedings of the Seventh International Symposium on Imprecise Probability: Theories and Applications},
+  editor = {Coolen, F. and de Cooman, G. and Fetz, T. and Oberguggenberger, M.},
+  pages={199--207},
+  year={2011},
+  url={http://www.sipta.org/isipta11/proceedings/papers/s050.pdf},
+  address = {Innsbruck},
+  publisher = {SIPTA}
+}
+
