--- a/setsofconjugatepriors.tex
+++ b/setsofconjugatepriors.tex
@@ -397,7 +397,7 @@ To summarize, imprecise probability methods allow for a much more adequate model
 than non-informative priors, the traditional Bayesian approach to this problem, can deliver.
 Instead of the somehow awkward choice of a certain non-informativeness approach,
 to define an imprecise non-informative prior, the analyst just needs to specify one parameter
-(or two, as partly in \cite{2012:benavolizaffalon})
+(or two, as partly in \textcite{2012:benavolizaffalon})
 determining the learning speed of the model, namely $\nz$ for the IDM.
 
 
