--- a/genbayesinf.tex
+++ b/genbayesinf.tex
@@ -572,7 +572,7 @@ may not be adequate to represent learning, especially when observed data is rath
 and should overturn prior beliefs about the data generating process.
 As posterior beliefs derived from the Generalised Bayes' Rule must be coherent with both prior beliefs and data,
 they may be rather imprecise in case of very vague prior beliefs or unexpected data.
-Essentially, the Generalised Bayes' Rule does not allow to abandon prior beliefs in the light of new data,
+Essentially, the Generalised Bayes' Rule does not allow to abandon prior beliefs in the light of surprising data,
 and both too vague or specific, but (in the light of the data) inappropriate prior beliefs
 may influence posterior beliefs to an intolerable extent.%
 \footnote{However, as we will see in Section~\ref{sec:gbicp-properties-criteria},
@@ -594,7 +594,7 @@ like the model suggested by \textcite{2008:cattaneo} in the (profile) likelihood
 a variant of which also allows to incorporate prior information by using a so-called prior likelihood.
 
 Another approach to tackle these issues is to refine the concept of coherence itself,
-and replace or complement it with a notion that accounts for possible change of a subject's beliefs
+and to replace or complement it with a notion that accounts for possible change of a subject's beliefs
 in the light of new evidence. This concept of \emph{temporal coherence} \parencite{1985:goldstein::temporal}
 attempts to frame, informally stated, only current beliefs about future beliefs,
 and not the future beliefs themselves (that may take into account new evidence not according to coherence).
@@ -602,26 +602,25 @@ For an inference approach based on this notion, see
 \textcite{2007:goldstein:wooff::bayeslinear}; 
 \textcite{2013:troffaes:goldstein} give some first results on consequences of temporal coherence
 for inference with coherent lower previsions.
-%***something on conditioning versus belief revision, temporal coherence???***
+%something on conditioning versus belief revision???
 
-Another important critique of the Generalised Bayes' Rule relates to issues from a decision theoretic point of view.
+A very important foundational critique of the Generalised Bayes' Rule relates to issues from a decision theoretic point of view.
 It has been shown that the decision theoretic justification of Bayes' Rule
 as producing prior risk minimising decision functions does not extend to the case of sets of priors.
 Updating by Generalised Bayes' Rule does no longer necessarily lead to optimal decision functions and thus, as one could argue,
 also not to optimal inference procedures; see, in particular, \textcite{2003:augustin} for a detailed discussion, 
 \textcite{2001:NoubiapSeidel} and \textcite{Augustin5:2004} for algorithms to calculate optimal decision functions.
 
-
-%Despite these criticisms, we will stick to ***
+%Despite these criticisms, we will stick to 
 These important criticisms notwithstanding, 
 the models discussed in this thesis will rely on the inference procedure described above,
 based on the Generalised Bayes' Rule to obtain $\mathcal{M}_{|\x}$.
 As will be discussed in Section~\ref{sec:generalmodel},
 the suggested models nevertheless provide very attractive inference features.
 Furthermore, we will sketch in Section~\ref{sec:concluding-outlook}
-(see also some first technical considerations in Section~\ref{sec:boatshape}) ****boatshape***
+(see also some first technical considerations in Section~\ref{sec:boatshape})
 how models along this approach can be modified to cater for `bonus precision'
-if prior and data coincide especially well.****
+if prior and data coincide especially well.
 
 
 \subsection{A Brief Glance on Related Concepts***}
